--- a/tex/EnsembleSimus.tex
+++ b/tex/EnsembleSimus.tex
@@ -1,4 +1,4 @@
-\chapter{Ensemble des simulations réalisées}\label{chap:SimusRealisees}
+\chapter{Simulations réalisées}\label{chap:SimusRealisees}
 \mylocaltoc
 
 \section{Introduction}
