--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -72,6 +72,7 @@
 	\setlength\dashlinedash{1pt}
 	\setlength\dashlinegap{1.5pt}
 %	\setlength\arrayrulewidth{1cm}
+\usepackage{tabularray}
 	
 %\newcommand{\mycite}[4]{
 %	\begin{flushright}
@@ -165,6 +166,7 @@
 \usepackage{tabularx}
 \usepackage{stmaryrd}
 \usepackage{mathtools}
+\usepackage{nicefrac}
 \usepackage{bm}
 \usepackage{graphicx}% Include figure files
 \usepackage{subcaption}
