--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,4 +1,13 @@
 
+@software{DeltaEC,
+  author = {Ward, Bill and Clark, John and Swift, Greg},
+  title = {{Design Environment for Low-amplitude
+Thermoacoustic Energy Conversion}},
+  url = {https://www.losalamosthermoacoustics.org/deltaec.html},
+  version = {6.4b2.9},
+  date = {2025-02-18},
+}
+
 @article{g_correlations_2022,
 	title = {Correlations and Numerical Modeling of Stacked Woven Wire-Mesh Porous Media for Heat Exchange Applications},
 	volume = {15},
