Change font call and stuff

--- a/fig/fig_SuperpositionComsol/tex/fig_SuperpositionComsol.tex
+++ b/fig/fig_SuperpositionComsol/tex/fig_SuperpositionComsol.tex
@@ -3,7 +3,7 @@
 	\def\spx{.2/4*\textwidth}
 	
 	
-	\draw[->] (0,0) node (tot) {} -- ++(\len,0) node [right]{$\tau$};
+	\draw[->] (0,0) node (tot) {} -- ++(\len,0) node [right]{$\theta$};
 	\draw[->] (tot.center) -- ++(0,\len) node [above]{$\mathbf e_r$};
 	
 	\draw (\len+\spx/2,\len/2) node{$=$};
@@ -13,7 +13,7 @@
 	\draw (.5*\len,1.1*\len) node{\footnotesize(a)};
 	
 	
-	\draw[->] ({\len+\spx},0) node (TA) {} -- ++(\len,0) node [right]{$\tau$};
+	\draw[->] ({\len+\spx},0) node (TA) {} -- ++(\len,0) node [right]{$\theta$};
 	\draw[->] (TA.center) -- ++(0,\len) node [above]{$\mathbf e_r$};
 	
 	\draw ({2*\len+3*\spx/2},\len/2) node{$+$};
@@ -23,7 +23,7 @@
 	\draw (1.5*\len+\spx,1.1*\len) node{\footnotesize(b)};
 	
 	
-	\draw[->] ({2*(\len+\spx)},0) node (Cond) {} -- ++(\len,0) node [right]{$\tau$};
+	\draw[->] ({2*(\len+\spx)},0) node (Cond) {} -- ++(\len,0) node [right]{$\theta$};
 	\draw[->] (Cond.center) -- ++(0,\len) node [above]{$\mathbf e_r$};
 	
 	\draw ({3*\len+5*\spx/2},\len/2) node{$+$};	
@@ -33,7 +33,7 @@
 	\draw (2.5*\len+2*\spx,1.1*\len) node{\footnotesize(c)};
 	
 	
-	\draw[->] ({3*(\len+\spx)},0) node (Conv) {} -- ++(\len,0) node [right]{$\tau$};
+	\draw[->] ({3*(\len+\spx)},0) node (Conv) {} -- ++(\len,0) node [right]{$\theta$};
 	\draw[->] (Conv.center) -- ++(0,\len) node [above]{$\mathbf e_r$};
 	
 	\draw[very thick] (3.3*\len+3*\spx,.1*\len) -- ++(.3*\len,.8*\len);
