change \echaf pour rajout de "??"

--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -42,7 +42,7 @@
 \renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
 
 
-\newcommand{\echaf}[1]{\textcolor{red}{\{#1\}}}
+\newcommand{\echaf}[1]{\textcolor{red}{\{?#1?\}}}
 %---------------------------------------------------------------------%
 % PACKAGES
 %---------------------------------------------------------------------
