--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -37,7 +37,7 @@ Les expériences réalisées avant le début de cette thèse sont faite en utili
 
 Dans cet article, il est montré qu'à ces fréquence et déphasage inter-sources, et à une amplitude $DR=\nicefrac{p_1}{p_0}=\qty{3.6}{\percent}$, une puissance d'alimentation des sources $\dot W_e=\qty{193}{\watt}$ et consommée, une quantité de chaleur de $\dot Q_f=\qty{290}{\watt}$ est extraite à la source froide et la température $T_a=\qty{15}{\degreeCelsius}$ est atteinte. Le coefficient de performance à ce point de fonctionnement est $\COP=\nicefrac{\dot Q_f}{\dot W_e}=\num{1.5}$, soit \qty{15}{\percent} du coefficient de performance de Carnot.\smallskip
 
-Cependant, les résultats obtenus avant le démarrage de cette thèse montrent des écarts avec les prédictions de la théorie linéaire.\echaf{ajouter figures des écarts mesures-modèle DeltaEC}
+Cependant, les résultats obtenus avant le démarrage de cette thèse montrent des écarts avec les prédictions de la théorie linéaire. Par exemple\echaf{ajouter figures des écarts mesures-modèle DeltaEC}
 
 \begin{figure}[!ht]
     \centering
@@ -57,7 +57,7 @@ Cependant, les résultats obtenus avant le démarrage de cette thèse montrent d
 		\caption{}
 		\label{fig:ATE_ProfilsCHX_5mm}
 	\end{subfigure}	    
-    \caption{\'Ecarts entre les prédictions de la théorie linéaire de la thermoacoustique et les résultats obtenus avec le réfrigérateur \textsc{Tacot} \cite{ramadan_design_2021}.}
+    \caption{Mesures et simulation linéaire de profils de température dans le régénérateur du \textsc{Tacot} pour différentes amplitudes acoustiques \cite{ramadan_design_2021}. \subref{fig:ATE_ProfilsAX_5mm} profils axiaux, et \subref{fig:ATE_ProfilsCHX_5mm}, profils transverses du côté de l'échangeur froid.}
     \label{fig:ATE_Profils_5mm}
 \end{figure}
 
@@ -117,7 +117,7 @@ Les axes $\mathbf e_x$ et $\mathbf e_r$ sont alors respectivement associés aux 
 %		 &= \frac{V_{\sf tot}-V_{\sf metal}}{V_{\sf tot}} \nonumber\\
 %		 &= 1 - \frac{m_{\sf metal}}{m_{\sf tot}} \label{eq:Porosite_Masse}
 \end{align}
-où $V_{\sf gaz}$ représente le volume occupé par le gaz dans le régénérateur, et $V_{\sf tot}$ le volume total du régénérateur. Cette porosité est choisie pour être comparé avec le noyau utilisé précédement et qui est support des expériences dont les résultats sont publiés par Ramadan \textit{et al.}, avec une porosité qui vaut $\Phi=\qty{75}{\percent}$ \cite{ramadan_design_2021}. La masse de tissus $m_{\sf tissus}$ à utiliser pour atteindre la porosité souhaitée est déduite de cette relation et s'écrit 
+où $V_{\sf gaz}$ représente le volume occupé par le gaz dans le régénérateur, et $V_{\sf tot}$ le volume total du régénérateur. Ce régénérateur est différent de celui utilisé dans l'article de Ramadan \textit{et al.}~\cite{ramadan_design_2021} pour comparer les performances et le comportement du réfrigérateur si son noyau est changé\echaf{phrase à retravailler}. La masse de tissus $m_{\sf tissus}$ à utiliser pour atteindre la porosité souhaitée est déduite de cette relation et s'écrit 
 
 \begin{align}
 %		 &= \frac{V_{\sf tot}-V_{\sf tissus}}{V_{\sf tot}} \nonumber\\
