--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -289,21 +289,85 @@
     %\vfill
     %\includegraphics[width=.4\textwidth]{{logo/Université_de_Poitiers_(logo_2012).png}}
 %    \includegraphics[height=4cm]{{/run/media/ohmenkoler/Samsung_T5/Docs/Université/Templates_LaTex/Logos/imdea.JPG}}
-    \vfill
-   	\textsc{Université de Poitiers \\ Institut Pprime}
+{\normalsize
+   	\textbf{THÈSE}
+   	\vfill
+
+	Pour l’obtention du Grade de
+	\vfill
+
+	DOCTEUR DE L’UNIVERSITÉ DE POITIERS
+	\vfill
+
+	(ÉCOLE SUPÉRIEURE d’INGÉNIEURS de POITIERS)
+
+	(Diplôme National - Arrêté du 25 mai 2016)
+	\vfill
+
+	École Doctorale 651 :
+
+	MIMME – Mathématiques – Informatique – Matériaux – Mécanique - Energétique
+	\vfill
+
+	Secteur de Recherche :
+
+	\echaf{Acoustique}
+	\vfill
+	
+	Présentée par :
+	
+	Martin Fontbonne
+	
+}
     \vfill
         \hrule\leavevmode\\[0.3cm]
-        \huge\textbf{Optimisation d'un réfrigérateur thermoacoustique compact} \\[0.65cm]
+        \textbf{\'Etude de l'impact de la convection naturelle sur la distribution de température dans le noyau d'une pompe à chaleur thermoacoustique compacte coaxiale} \\[0.65cm]
         \hrule
     \vfill
+{\normalsize
+	Direction de thèse : 
+	
+	\begin{tabular}{l l}
+	\textbf{Hélène Bailliet} & Institut Pprime, Université de Poitiers \\
+	\textbf{Jean-Christophe Valière} & Institut Pprime, Université de Poitiers \\
+	\textbf{Gaëlle Poignand} & LAUM, Le Mans Université
+	\end{tabular}
+	\vfill
+
+	Soutenue le \rule{2.5cm}{.5pt}
+	\vfill
+	
+	devant la Commission d'Examen
+	
+	\rule{5cm}{.5pt}
+	
+	\rule{5cm}{.5pt}
+	
+	\rule{5cm}{.5pt}
+	
+	\rule{5cm}{.5pt}
+	
+	\rule{5cm}{.5pt}
+	
+	\rule{5cm}{.5pt}
+	
+	\rule{5cm}{.5pt}
+	
+	\rule{5cm}{.5pt}
+
+	
+}
 }%vertically center text
-\author{\begin{tabular}{r @{ } l}
-Auteur : & Martin Fontbonne\\
-Encadrants : & Hélène Bailliet, \textit{Université de Poitiers}\\
-	& Jean-Christophe Valière, \textit{Université de Poitiers}\\
-	& Gaëlle Poignand, \textit{Le Mans Université}
-\end{tabular}}
-\date{\echaf{??} 2025}
+
+\author{}
+\date{}
+%\author{\begin{tabular}{r @{ } l}
+%Auteur : & Martin Fontbonne\\
+%Encadrants : & Hélène Bailliet, \textit{Université de Poitiers}\\
+%	& Jean-Christophe Valière, \textit{Université de Poitiers}\\
+%	& Gaëlle Poignand, \textit{Le Mans Université}
+%\end{tabular}}
+%\date{\echaf{??} 2025}
 
 %\dominitoc
 \raggedbottom
