--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -338,6 +338,10 @@
 	\vfill
 	
 	devant la Commission d'Examen
+	\vfill
+	
+	\textbf{\underline{JURY}}
+	\vfill
 	
 	\rule{5cm}{.5pt}
 	
@@ -354,6 +358,7 @@
 	\rule{5cm}{.5pt}
 	
 	\rule{5cm}{.5pt}
+	
 
 	
 }
